--- a/crates/snxcore/Cargo.toml
+++ b/crates/snxcore/Cargo.toml
@@ -22,7 +22,7 @@ serde_json = "1"
 tokio-native-tls = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "process", "signal", "macros"] }
 tokio-util = { version = "0.7", features = ["net"] }
-reqwest = { version = "0.12", features = ["native-tls"] }
+reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }
 futures = "0.3"
 bytes = "1"
 hex = "0.4"
