--- a/package/debian/control.in
+++ b/package/debian/control.in
@@ -4,6 +4,6 @@ Section: net
 Priority: optional
 Installed-Size: 35000000
 Architecture: {{arch}}
-Depends: libc6 (>= 2.35), libgtk-4-1 (>= 4.6), libwebkitgtk-6.0-4 (>= 2.50)
+Depends: libc6 (>= 2.35), libgtk-4-1 (>= 4.6)
 Maintainer: Dmitry Pankratov <dmitry@pankratov.net>
 Description: SNX-RS Check Point VPN Client for Linux
