--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
           - arch: x86_64
             runner: ubuntu-22.04
           - arch: arm64
-            runner: ubuntu-22.04-arm64
+            runner: ubuntu-22.04-arm
     runs-on: ${{ matrix.runner }}
 
     steps:
