--- a/apps/snx-rs-gui/Cargo.toml
+++ b/apps/snx-rs-gui/Cargo.toml
@@ -13,7 +13,7 @@ publish.workspace = true
 [dependencies]
 snxcore = { path = "../../crates/snxcore" }
 i18n = { path = "../../crates/i18n" }
-secrecy = { version = "0.10", features = ["serde"] }
+secrecy = "0.10"
 ksni = "0.3"
 gtk4 = { version = "0.10", features = ["v4_4"] }
 png = "0.18"
