--- a/apps/snx-rs/Cargo.toml
+++ b/apps/snx-rs/Cargo.toml
@@ -22,4 +22,4 @@ tracing-subscriber = "0.3"
 clap = { version = "4.5", features = ["derive"] }
 clap_complete = { workspace = true }
 ipnet = {  version = "2", features = ["serde"] }
-secrecy = { version = "0.10", features = ["serde"] }
+secrecy = "0.10"
