--- a/crates/snxcore/Cargo.toml
+++ b/crates/snxcore/Cargo.toml
@@ -19,7 +19,7 @@ pest_derive = "2"
 anyhow = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-secrecy = { version = "0.10", features = ["serde"] }
+secrecy = "0.10"
 tokio-native-tls = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "process", "signal", "macros"] }
 tokio-util = { version = "0.7", features = ["net"] }
