--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ version = "5.1.0"
 license = "AGPL-3.0"
 edition = "2024"
 authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
-description = "Rust client for Checkpoint VPN tunnels"
+description = "Check Point VPN client for Linux"
 readme = "README.md"
 repository = "https://github.com/ancwrd1/snx-rs"
 keywords = ["snx", "vpn", "ipsec"]
