--- a/crates/snxcore/Cargo.toml
+++ b/crates/snxcore/Cargo.toml
@@ -11,7 +11,7 @@ keywords.workspace = true
 publish.workspace = true
 
 [dependencies]
-isakmp = { git = "https://github.com/ancwrd1/isakmp.git" }
+isakmp = { git = "https://github.com/ancwrd1/isakmp.git", branch = "machine-auth" }
 i18n = { path = "../i18n" }
 
 pest = "2"
